<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_get_note"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="it.libero.alessandragenca.notemanagerandroidclient.GetActivity">

    <EditText
        android:id="@+id/titleForGet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblText" />




    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/noteOutput"

        android:layout_marginTop="77dp"
        android:layout_below="@+id/titleForGet"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <Button
        android:id="@+id/buttongetACT"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:text="@string/get_note"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />

    <TextView
        android:id="@+id/lblText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="Text" />


</RelativeLayout>

