<resources>
    <string name="app_name">NoteManagerAndroidClient</string>

    <!-- Risorse di tipo stringa (non "hard-coded") -->

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="input">Insert Title</string>
    <string name="inputText">Insert Text </string>
    <string name="output">Output</string>
    <string name="register_user">Register User</string>
    <string name="add_note">Add Note</string>
    <string name="modify_note">Modify Note</string>
    <string name="get_all">Get All Notes</string>
    <string name="remove_note">Remove Note</string>
    <string name="remove">Remove All Notes</string>
    <string name="get_note">Get</string>
    <string name="get_size">Get Size</string>
    <string name="title_activity_log_in">LogInActivity</string>


    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_password2">Reinsert Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign up</string>
    <string name="action_log_in">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="registrati">Sign up</string>
    <string name="accedi">Login</string>
    <string name="email">Please insert your e-mail address</string>
    <string name="nome">Please insert your Name</string>
    <string name="cognome">Please insert your Surname</string>
    <string name="init_message">Please select an Operation</string>


</resources>
